[package]
name = "rrn"
version = "0.1.0"
authors = ["Helly Guo <hellyguo@foxmail.com>"]
edition = "2021"
exclude = ["tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
log4rs = { version = "1.2.0", features = [] }
time = "0.3.17"

[dev-dependencies]
