[package]
name = "rrn"
version = "0.1.3-dev" # managed by updgitver
authors = ["Helly Guo <hellyguo@foxmail.com>"]
edition = "2021"
exclude = ["tests"]
homepage = "https://itcraft.cn/rrn/"
repository = "https://github.com/itcraft-cn/rrn"
license = "Apache-2.0"
readme = "README.md"
description = "batch rename files/dirs by regex"
categories = ["command-line-utilities"]
documentation = "https://docs.rs/crate/rrn/latest"
keywords = ["Batch", "Rename", "Regex"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopt = "1.1.9"
regex = "1.11.1"

[dev-dependencies]
